--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <script>
   function makeRequestWithUserGesture() {
     const testElement = document.getElementById("test");
+    const accessElement = document.getElementById("access");
+    document.hasStorageAccess().then(
+      function (hasAccess) {
+        accessElement.innerHTML = "Got access already?: " + hasAccess;
+      },
+      function (reason) {
+        accessElement.innerHTML = "Access had a problem: " + reason;
+      }
+    );
     document.requestStorageAccess().then(
       function () {
         testElement.innerHTML = "GOT ACCESS: " + document.cookie;
@@ -17,6 +26,7 @@
   </script>
   <button onclick="makeRequestWithUserGesture()">Get access</button>
   <div id="test"></div>
+  <div id="access"></div>
   <script>
     document.write("Cookie:" + document.cookie);
   </script>
