Add reload button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   }
   </script>
   <button onclick="makeRequestWithUserGesture()">Get access</button>
+  <button onclick="location.reload(()">Reload page</button>
   <div id="test"></div>
   <script>
     document.write("Cookie:" + document.cookie);
