Add window open button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@ body, button { font-size: 40px; }
       }
     );
   }
+
+  function openWindow() {
+    open("google.com");
+  }
   </script>
+  <button onclick="openWindow()">Open window</button>
   <br>
   <button onclick="makeRequestWithUserGesture()">Get access</button>
    <br>
