--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body, button { font-size: 40px; }
   }
 
   function openWindow() {
-    open("google.com");
+    open("http://google.com");
   }
   </script>
   <button onclick="openWindow()">Open window</button>
